--- a/src/css/style.css
+++ b/src/css/style.css
@@ -44,3 +44,38 @@ nav a{
     margin-top: 10px;
     background: aqua;
 }
+
+section{
+    width: 100%;
+    height: 100vh;
+}
+
+#exemplo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#exemplo #image{
+    width: 400px;
+    height: 400px;
+}
+
+#image{
+    animation: efeito 0.6s ease-in-out infinite;
+}
+
+@keyframes efeito{
+    0%,
+    100%{
+        transform: scale(1);
+        transform: rotate(0deg);
+        transform: translateX(50px);
+    }
+    50%{
+        transform: scale(1.1);
+        /* transform: rotate(180deg); */
+        filter: drop-shadow(blue 0 0 2rem);
+    }
+}
